// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDetailsTimeline does not render when the feature flag is disabled 1`] = `<div />`;

exports[`PaymentDetailsTimeline renders correctly (with a mocked Timeline component) 1`] = `
<div>
  <div
    class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
  >
    <div
      class="components-card__header is-size-large css-6qsnk-HeaderUI e1q7k77g1"
    >
      Timeline
    </div>
    <div
      class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
    >
      <div>
        Mock timeline
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders error 1`] = `
<div>
  <div
    class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
  >
    <div
      class="components-card__header is-size-large css-6qsnk-HeaderUI e1q7k77g1"
    >
      Timeline
    </div>
    <div
      class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
    >
      Error while loading timeline
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders loading 1`] = `
<div>
  <div
    class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
  >
    <div
      class="components-card__header is-size-large css-6qsnk-HeaderUI e1q7k77g1"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder"
      >
        Timeline
      </span>
    </div>
    <div
      class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
    </div>
  </div>
</div>
`;
